--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "envreplace",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "CLI utility to find and replace environment variable references in files with their values",
   "main": "index.js",
   "repository": "itaylor/envreplace",
@@ -9,7 +9,7 @@
     "test": "node node_modules/.bin/mocha --opts './mocha.opts' **.test.js",
     "lint": "node node_modules/.bin/eslint *.js"
   },
-  "author": "",
+  "author": "Ian Taylor",
   "dependencies": {
     "colors": "^1.1.2",
     "commander": "^2.9.0",
@@ -28,7 +28,12 @@
   "engines": {
     "node": ">=6.0.0"
   },
-  "keywords": ["replace", "find", "environment", "variable", "env"],
-  "author": "Ian Taylor",
+  "keywords": [
+    "replace",
+    "find",
+    "environment",
+    "variable",
+    "env"
+  ],
   "license": "MIT"
 }
