--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "envreplace",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "CLI utility to find and replace environment variable references in files with their values",
   "main": "index.js",
   "repository": "itaylor/envreplace",
@@ -23,7 +23,7 @@
     "mocha": "^3.2.0"
   },
   "bin": {
-    "envreplace": "index.js"
+    "envreplace": "./index.js"
   },
   "engines": {
     "node": ">=6.0.0"
